fixed gist scrollbar bug

--- a/css/style.css
+++ b/css/style.css
@@ -207,6 +207,7 @@ pre code {
     padding: 1em 3em;
     margin-bottom: 1em;
     line-height: 1.5;
+    overflow-wrap: break-word;
     white-space: pre-wrap;
 }
 
@@ -216,6 +217,12 @@ pre code {
     background-color: #fff;
     padding: 1em 3em;
     margin-bottom: 1em;
+}
+/* NOTES PAGE SCCROLLBAR FIX FOR GISTS */
+@mdeia (min-width: 768px) and (max-width: 910px) {
+    .gist {
+    max-width: 450px;
+    }
 }
 
 /* DEFINITION LISTS */
